# human-tracking-rgb-cam-plus-2d-lidar

./: README.md
devel/: .catkin  setup.sh
devel/lib/coordinates/: coordinates_publisher
devel/lib/pkgconfig/: coordinates.pc  det_and_track.pc
devel/share/coordinates/cmake/: coordinatesConfig.cmake
devel/share/det_and_track/cmake/: det_and_trackConfig.cmake
src/coordinates/: CMakeLists.txt
src/coordinates/src/: coordinates_publisher.cpp
src/det_and_track/: CMakeLists.txt  package.xml
src/det_and_track/src/: combined_script copy.py  combined_script.py  dbscan_track.py  depth_to_color.py  modif.py  track_wheelchair.py  yolo_on_image.py
